--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,10 +51,9 @@ img {
   display: block;
   max-width: 100%;
   margin: 0 0 1rem;
-  border-radius: 5px;
 }
 
-table {
+table.table {
   margin-bottom: 1rem;
   width: 100%;
   font-size: 85%;
@@ -62,17 +61,17 @@ table {
   border-collapse: collapse;
 }
 
-td,
-th {
+table.table td,
+table.table th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
 }
 
-th {
+table.table th {
   text-align: left;
 }
 
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
+table.table tbody tr:nth-child(odd) td,
+table.table tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
 }
